[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 29 )

[node name="Player" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
dash_magnitude = 100.0
no_dash_radius_squared = 8000.0

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Arrow" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
offset = Vector2( 100, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timers" type="Node" parent="."]

[node name="DashCooldown" type="Timer" parent="Timers"]
wait_time = 0.3
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Timers/DashCooldown" to="." method="_on_DashCooldown_timeout"]
